# liskell

./: README.md  liskell.cabal
app/: Main.hs
src/Liskell/: Eval.hs  Parser.hs  Syntax.hs  Tests.hs
