name:                liskell
version:             0.1.0.0
-- synopsis:
-- description:
author:              Avigael
maintainer:          code@gaels.us
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Liskell.Syntax, Liskell.Parser, Liskell.Eval, Liskell.Tests
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9, containers, QuickCheck, random, parser-combinators
  hs-source-dirs:      src
  default-language:    Haskell2010

executable liskell
  main-is:             Main.hs
  hs-source-dirs:      app
  -- other-modules:
  -- other-extensions:
  build-depends:       liskell, base >=4.9, containers
  ghc-options:         -fwarn-incomplete-patterns -fwarn-tabs -fno-warn-type-defaults
  -- hs-source-dirs:
  default-language:    Haskell2010
